src/objects/CaseUpdateHistory__c.object
<CustomObject>
    <description>This object stores a snapshot of case information created by trigger when a case status changes. This object is intended for analytic use only. It is a child to case in a master detail relationship.</description>
    <fields>
        <fullName>AppealStatus__c</fullName>
        <label>Appeal Status</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Initial Pend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Final Pend</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Case Update Histories</relationshipLabel>
        <relationshipName>CaseUpdateHistories</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Escalated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Escalated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Origin__c</fullName>
        <label>Origin</label>
        <picklist>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banner Event</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <description>Owner of the case at the time that the case is edited</description>
        <label>Owner</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ParentCaseCreatedDate__c</fullName>
        <label>Parent Case Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PreviousStatusChangeTime__c</fullName>
        <label>Previous Status Change Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PreviousStatusValue__c</fullName>
        <label>Previous Status Value</label>
        <picklist>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Escalated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Updated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer/Student Response Needed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Staff Response Needed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resolved</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <picklist>
            <picklistValues>
                <fullName>1098-T</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2nd Term Exmpt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3P (Third Party)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4th Fail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AAV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Absences</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Access Assistance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Access Code Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Inquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advanced Programs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anthem Singers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Appeal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application Question</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assessments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attention Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Authorizations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Award</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAES/MAES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Balance Inquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benefit Status</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bursar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancel Submission</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capstone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash Receipts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cert Status</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change Personal Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Citations</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RecordType__c</fullName>
        <label>Record Type</label>
        <picklist>
            <picklistValues>
                <fullName>ADA Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Academic Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Admissions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alumni</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alumni Relations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AppSupport</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assessment Scheduling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bursar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bursar-Withdrawal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAREforce Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Career Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Admin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Course Mentor Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ECare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EWB Adds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enrollment Case</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Excessive Attempts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field Placement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finaid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Graduation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ITHelpDesk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Learning Resources</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Military Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Performance Task</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Program Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Program Feedback</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Readmission</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Records</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scholarship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scores</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>StatusChangeTime__c</fullName>
        <label>Status Change Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>StatusValue__c</fullName>
        <label>Status Value</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open: Updated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open: WGU Response Needed / In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open: Student Response Needed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resolved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Escalated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TestPreviousTime__c</fullName>
        <label>TestPreviousTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TimeInStatus__c</fullName>
        <label>Time In Status</label>
        <precision>11</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Feature Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Positive Feedback</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Negative Feedback</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Problem</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Question</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Question/Inquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resource Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Failure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suggestion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System Failure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Breakdown of Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Lapse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assistance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FYI</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Case Update History</label>
    <nameField>
        <displayFormat>CaseUpdateHistory-{0000}</displayFormat>
        <label>Case Update History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Update Histories</pluralLabel>
    <recordTypes>
        <fullName>CaseStatusUpdate</fullName>
        <active>true</active>
        <description>The record type that stores case update history when a case status is updated.</description>
        <label>Case Status Update</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>